--- a/YARP-LB/YARP-LB.csproj
+++ b/YARP-LB/YARP-LB.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>YARP_LB</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
+  </ItemGroup>
+
 </Project>
