--- a/YARP-LB/appsettings.json
+++ b/YARP-LB/appsettings.json
@@ -5,5 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "api-route": {
+        "ClusterId": "api-cluster",
+        "Match": {
+          "Path": "/hello"
+        }
+      }
+    },
+    "Clusters": {
+      "api-cluster": {
+        "LoadBalancingPolicy": "RoundRobin",
+        "Destinations": {
+          "api1-destination": {
+            "Address": "https://localhost:7100/"
+          },
+          "api2-destination": {
+            "Address": "https://localhost:7200/"
+          }
+        }
+      }
+    }
+  }
 }
